<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>net.clementlevallois.functions</groupId>
        <artifactId>parentbuild</artifactId>
        <version>1.0</version>
    </parent>    
    <artifactId>NocodeFunctionsWebServices</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>
    <name>Nocode functions as an API</name>
    <properties>
        <langchain.version>1.0.0-alpha1</langchain.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>io.javalin</groupId>
            <artifactId>javalin</artifactId>
            <version>6.6.0</version>
        </dependency>
        <dependency>
            <groupId>io.mikael</groupId>
            <artifactId>urlbuilder</artifactId>
            <version>2.0.9</version>
        </dependency>
        <dependency>
            <groupId>net.clementlevallois.functions</groupId>
            <artifactId>functions-model</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>net.clementlevallois.functions</groupId>
            <artifactId>umigon-explain</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>net.clementlevallois.functions</groupId>
            <artifactId>PdfMatcher</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>net.clementlevallois.functions</groupId>
            <artifactId>umigon-lemmatizer-lightweight</artifactId>
            <version>0.13</version>
        </dependency>
        <dependency>
            <groupId>net.clementlevallois.functions</groupId>
            <artifactId>cowo-core</artifactId>
            <version>1.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>net.clementlevallois.functions</groupId>
            <artifactId>spatialize-function</artifactId>
            <version>1.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>net.clementlevallois.functions</groupId>
            <artifactId>llm-functions</artifactId>
            <version>1.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>jakarta.json</groupId>
            <artifactId>jakarta.json-api</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.json.bind</groupId>
            <artifactId>jakarta.json.bind-api</artifactId>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.eclipse.parsson/parsson -->
        <dependency>
            <groupId>org.eclipse.parsson</groupId>
            <artifactId>parsson</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse</groupId>
            <artifactId>yasson</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.9</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.9</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>net.clementlevallois.functions</groupId>
            <artifactId>topic-detection</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>net.clementlevallois.utils</groupId>
            <artifactId>utils-core</artifactId>
        </dependency>
        <dependency>
            <groupId>net.clementlevallois.functions</groupId>
            <artifactId>GexfVosViewerJson</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>net.clementlevallois.functions</groupId>
            <artifactId>gaze</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>net.clementlevallois.functions</groupId>
            <artifactId>graph-ops</artifactId>
            <version>1.0</version>
            <type>jar</type>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin> 
                <artifactId>maven-dependency-plugin</artifactId> 
                <executions> 
                    <execution> 
                        <phase>install</phase> 
                        <goals> 
                            <goal>copy-dependencies</goal> 
                        </goals> 
                        <configuration> 
                            <outputDirectory>${project.build.directory}/lib</outputDirectory> 
                        </configuration> 
                    </execution> 
                </executions> 
            </plugin> 
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib</classpathPrefix> 
                            <mainClass>net.clementlevallois.nocodefunctionswebservices.APIController</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>24</source>
                    <target>24</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>